# PEA

Data/ATSP/ATSP_out/: ft70.txt  kro124p.txt  rbg358.txt  ry48p.txt
Data/ATSP_out/: ftv35.txt  ftv38.txt  ftv55.txt  ftv64.txt  ftv70.txt  p43.txt  rbg323.txt  rbg403.txt
Data/TSP/: bays29.tsp  gr120.tsp  si1032.tsp  si175.tsp
Data/TSP_out/: fri26.txt  gr120.txt  gr24.txt  gr48.txt  kroA100.txt  kroC100.txt  kroD100.txt  lin105.txt  st70.txt
Data/TSP_out/x/: brazil58.txt  gr17.txt  gr21.txt  hk48.txt  kroA150.txt  kroA200.txt  kroB100.txt  kroB150.txt  kroB200.txt  kroE100.txt  lin318.txt  si1032.txt  si175.txt  si535.txt
Genetic algorithm - PEA/: CMakeLists.txt  GenAlg.cpp  GenAlg.h  Genetic algorithm - PEA.cpp  Genetic algorithm - PEA.h  KomivoyagerLocation.cpp  KomivoyagerLocation.h  Mensuration.cpp  Mensuration.h  SimpleIni.h  Wyżażanie algorytm informacje i założenia.txt  Wyżażanie algorytm informacje i założenia.txt.bak
Held-Karp - PEA - Komivoyager/: CMakeLists.txt  Held-Karp.rar  PEA - HeldKarp Sprawozdanie.docx  ~$A - HeldKarp Sprawozdanie.docx
Held-Karp - PEA - Komivoyager/Held-Karp - PEA - Komivoyager/: CMakeLists.txt  Held-Karp - PEA - Komivoyager.cpp  Held-Karp - PEA - Komivoyager.h  HeldKarpAlg.cpp  HeldKarpAlg.h  KomivoyagerLocation.cpp  KomivoyagerLocation.h  Mensuration.cpp  Mensuration.h  Wyżażanie algorytm informacje i założenia.txt  Wyżażanie algorytm informacje i założenia.txt.bak
PEA - Komivoyager/: CMakeLists.txt  PEA - BruteForce Sprawozdanie.docx  PEA - Komivoyager - BruteForce.rar
PEA - Komivoyager/PEA - Komivoyager/: Bruteforce.cpp  Bruteforce.h  CMakeLists.txt  KomivoyagerLocation.cpp  Mensuration.cpp  Mensuration.h  PEA - Komivoyager.cpp  PEA - Komivoyager.h
Wyżarzanie - PEA/: CMakeLists.txt  Wyrzażanie.rar
Wyżarzanie - PEA/Wyżarzanie - PEA/: AS_Alg.cpp  AS_Alg.h  CMakeLists.txt  KomivoyagerLocation.cpp  KomivoyagerLocation.h  Mensuration.cpp  Mensuration.h  Wyżarzanie - PEA.cpp  Wyżarzanie - PEA.h
